--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <div class="resume-item">
               <h4>Software Developer</h4>
               <h5>2023 - Present</h5>
-              <p><em>USAA - USAA San  Antonio,Tx </em></p>
+              <p><em>USAA  </em></p>
               <ul>
                 <li><p>Developed scalable microservices using Spring Boot and Kotlin for the insurance claims management platform.</p></li>
                 <li>Built responsive UIs with ReactJS, ensuring cross-device compatibility. </li>
@@ -319,7 +319,7 @@
             <div class="resume-item">
               <h4>Software Developer</h4>
               <h5>2021 - 2023</h5>
-              <p><em>PNC Bank  - Pittsburgh, Pennsylvania
+              <p><em>PNC Bank
               </em></p>
               <ul>
                 <li>Developed the online banking portal focusing on customer account management and transaction processing.
