--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I am a Senior Software Developer with over 8 years of experience building scalable, high-performance applications across industries like finance, insurance, and supply chain management. Proficient in ReactJS, Redux, Angular, Java (Spring Boot), Kotlin, and microservices, I specialize in delivering robust solutions with a focus on Test-Driven Development (TDD), CI/CD pipelines, and cloud-native architectures. My expertise extends to AWS, Kubernetes, and Docker, enabling seamless development and deployment of enterprise-grade applications. Passionate about creating efficient, user-centric solutions, I thrive on driving innovation and optimizing performance.</p>
+        <p>I am a Senior Software Developer with over 8 years of experience building scalable, high-performance applications across industries like finance, insurance, and supply chain management. Proficient in Angular, ReactJS, Redux, Java (Spring Boot), and microservices, I specialize in delivering robust solutions with a focus on Test-Driven Development (TDD), CI/CD pipelines, and cloud-native architectures. My expertise extends to AWS, Kubernetes, and Docker, enabling seamless development and deployment of enterprise-grade applications. Passionate about creating efficient, user-centric solutions, I thrive on driving innovation and optimizing performance.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
